css/_globals.css
/* *{
    background: #000 !important;
    color: #0f0 !important;
    outline: solid #f00 1px !important; 
} */

html {
    scroll-behavior: smooth;
    overflow:hidden;
}

body {
    height: 100vh;
    font-family: 'Raleway', sans-serif;
    font-weight: 500;
    margin: 0;
    padding: 0;
    position:relative;
    overflow-y:scroll;
    overflow-x: hidden;
}

*,
*::before,
*::after {
    margin: 0;
    padding: 0;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}
ul , li{
    list-style: none;
}

.top-title {
    font-size: 20px;
    font-weight: 800;
    display: inline-block;
    width: 100%;
    position: relative;
}

.pb-4{
    padding-bottom: 8px;
}

.pb-6{
    padding-bottom: 18px;
}

.container {
    padding: 0 calc(50vw - 700px);
}

.section {
    padding: 0 40px;
    margin-bottom: 40px;
}
@media screen and (max-width:1366px) {
    .section{
        padding: 0 30px;
    }
}

@media screen and (max-width:768px) {
    .container {
        padding: 0;
    }
    .section{
        padding: 0  20px;
    }
}

@media screen and (max-width:320px) {
    .section {
        padding: 0 14px;
    }
}

